17/06/2022 v.6.53 Neha
	* [ZB-8790] Reference Person( Book unit- CRM)

08/06/2022 v.6.52 Neha
	* [ZB-8834] Restriction on Payment Voucher and check Printing (Draft)

02/06/2022 v.6.51 Neha
	[ZB-8772] Add Bank details (Debit Note Print)

02/06/2022 v.6.50 Neha
	[ZB-8790] Reference Person( Book unit- CRM)

31/05/2022 v.6.49 Aswanth
	ZB-8467-Hide Reset to Draft / Cancel Menu Buttons(Journal entries)-->Feedbacks

31/05/2022 v.6.48 Neha
	[ZB-8631] Vendor Payment Adjustment import -->Feedbacks

30/05/2022 v.6.47 Neha
	[ZB-8756] Additional option in EWA Settings

26/05/2022 v.6.46 Neha
	[ZB-8631] Vendor Payment Adjustment import

24/05/2022 v.6.45 Shilpa mariya
	[ZB-8605] - Bank Recon Report Statement Line

19/05/2022 v.6.44 Neha
	[ZB-8516] Tax Adjustments Report --> Feedbacks

19/05/2022 v.6.43 Neha
	[ZB-8605] Bank Recon Report Statement Line

17/05/2022 v.6.42 Shilpamariya
	[ZB-8339] Unit creation:- feedback

17/05/2022 v.6.41 Shilpamariya
	[ZB-8339] Unit creation

13/05/2022 v.6.40 Neha
	[ZB-8516] Tax Adjustments Report
	[ZB-8515] Bank Reconciliation Report

11/05/2022 v.6.39 Neha
	[ZB-8464] Partner Ledger Filter

10/05/2022 v.6.38 Aswanth
	[ZB-8467] Hide Reset to Draft / Cancel Menu Buttons

10/05/2022 v.6.37 Neha
	[ZB-8464] Partner Ledger Filter

28/04/2022 v.6.36 Aswanth J V
	ZB-7397-message log/track visibility for total comission amount in lease agreement

28/04/2022 v.6.35 Shilpa mariya
	[ZB-8169] Advance Expenses Adjustment

25/04/2022 v.6.34 Neha
	[ZB-8350] Management Fee Invoice State Change
	[ZB-8169] Advance Expenses Adjustment-->Account changes
	[ZB-8338] Duplicate Invoice Creation

20/04/2022 v.6.33 Neha
	[ZB-8286] Check Tax Reports

14/04/2022 v.6.32 Neha
	[ZB-8169] Advance Expenses Adjustment-->Feedbacks
	[ZB-8262] Reconciled Entries Showing as Unreconciled --> Feedbacks

14/04/2022 v.6.31 Neha
	[ZB-8169] Advance Expenses Adjustment

12/04/2022 v.6.30 Neha
	[ZB-8262] Reconciled Entries Showing as Unreconciled

07/04/2022 v.6.29 Neha